# markdown-maker

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: commit.prompt.md  project_definition.prompt.md  task.prompt.md  test.prompt.md
config/: .secrets.yml.example  config.yml.example
docs/ai/: ARCHITECTURE.md  SOFTWARE_REQUIREMENTS.md  tasks.md
src/markdown_maker/: main.py
src/markdown_maker/clients/: __init__.py  confluence_client.py  confluence_tree_traverser.py
src/markdown_maker/converters/: html_to_markdown.py
src/markdown_maker/utils/: config.py  handlers.py  helpers.py
tests/: test_embedded_links.py  test_main.py  test_output_dir_creation.py  test_recursive_error_context.py  test_recursive_flag.py  test_recursive_output_structure.py  test_single_file_output.py  test_single_page_conversion.py  test_single_page_e2e.py
tests/clients/: test_confluence_client.py
tests/converters/: test_html_to_markdown.py
tests/utils/: test_config.py  test_helpers.py
